+ updated CharacterSelect graphics to be more dynamic

--- a/src/main/ui/tacticsOnTheLine.css
+++ b/src/main/ui/tacticsOnTheLine.css
@@ -25,16 +25,6 @@
     -fx-stroke-width: 1;
 }
 
-#characterSelectElement {
-    -fx-font-size: 20px;
-    -fx-font-family: Gill Sans Extrabold, sans-serif;
-}
-
-#advanceAndReturnButtons {
-    -fx-font-size: 10px;
-    -fx-font-family: Gill Sans Extrabold, sans-serif;
-}
-
 #characterNameLabel {
     -fx-font-size: 45px;
     -fx-font-family: "TubeOfCorn";
@@ -45,3 +35,20 @@
 #abilityNameLabels:hover {
     -fx-text-fill: #dbff4d;
 }
+
+#fancyNode {
+    -fx-font-size: 16px;
+    -fx-font-family: "TubeOfCorn";
+    -fx-stroke: #000000;
+    -fx-stroke-width: 1;
+}
+
+#fancyNode:hover {
+    -fx-text-fill: #dbff4d;
+}
+
+#normalNode {
+    -fx-font-size: 16px;
+    -fx-font-family: Gill Sans Extrabold, sans-serif;
+}
+
